--- a/index.html
+++ b/index.html
@@ -30,74 +30,81 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-        <div id="hour8" class="row time-block">
-            <div class="col-md-2-hour">
+        <div id="8" class="row time-block">
+            <div class="col-md-1 hour">
               8 AM
             </div>
-          <textarea class="row time-block col-md-9"></textarea>
+          <textarea class="description col-md-10"></textarea>
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour9" class="row time-block">
-            <div class="col-md-2-hour">
+        <div id="9" class="row time-block">
+            <div class="col-md-1 hour">
               9 AM
             </div>
-          <textarea class="row time-block col-md-9"></textarea>
+          <textarea class="description col-md-10"></textarea>
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour10" class="row time-block">
-            <div class="col-md-2-hour">
+        <div id="10" class="row time-block">
+            <div class="col-md-1 hour">
               10 AM
             </div>
-          <textarea class="row time-block col-md-9"></textarea>
+          <textarea class="description col-md-10"></textarea>
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour11" class="row time-block">
-            <div class="col-md-2-hour">
+        <div id="11" class="row time-block">
+            <div class="col-md-1 hour">
               11 AM
             </div>
-          <textarea class="row time-block col-md-9"></textarea>
+          <textarea class="description col-md-10"></textarea>
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour12" class="row time-block">
-            <div class="col-md-2-hour">
+        <div id="12" class="row time-block">
+            <div class="col-md-1 hour">
               12 PM
             </div>
-          <textarea class="row time-block col-md-9"></textarea>
+          <textarea class="description col-md-10"></textarea>
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour13" class="row time-block">
-            <div class="col-md-2-hour">
+        <div id="13" class="row time-block">
+            <div class="col-md-1 hour">
               1 PM
             </div>
-          <textarea class="row time-block col-md-9"></textarea>
+          <textarea class="description col-md-10"></textarea>
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour14" class="row time-block">
-            <div class="col-md-2-hour">
+        <div id="14" class="row time-block">
+            <div class="col-md-1 hour">
               2 PM
             </div>
-          <textarea class="row time-block col-md-9"></textarea>
+          <textarea class="description col-md-10"></textarea>
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour15" class="row time-block">
-            <div class="col-md-2-hour">
+        <div id="15" class="row time-block">
+            <div class="col-md-1 hour">
               3 PM
             </div>
-          <textarea class="row time-block col-md-9"></textarea>
+          <textarea class="description col-md-10"></textarea>
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour16" class="row time-block">
-            <div class="col-md-2-hour">
+        <div id="16" class="row time-block">
+            <div class="col-md-1 hour">
               4 PM
             </div>
-          <textarea class="row time-block col-md-9"></textarea>
+          <textarea class="description col-md-10"></textarea>
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour17" class="row time-block">
-            <div class="col-md-2-hour">
+        <div id="17" class="row time-block">
+            <div class="col-md-1 hour">
               5 PM
             </div>
-          <textarea class="row time-block col-md-9"></textarea>
+          <textarea class="description col-md-10"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="18" class="row time-block">
+            <div class="col-md-1 hour">
+              6 PM
+            </div>
+          <textarea class="description col-md-10"></textarea>
           <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
     </div>
